test/invalid/array.anf
mod array {
    def a = [1, 2; 3]
}